rename header (header with anywhere)

--- a/merchandising.html
+++ b/merchandising.html
@@ -4201,10 +4201,10 @@
                               >
                                 <div class="c1kn6kxw dir dir-ltr">
                                   <header
-                                    class="c1kffd0v cxy853f c1g36qz5 dir dir-ltr"
+                                    class="header cxy853f c1g36qz5 dir dir-ltr"
                                   >
-                                    <div class="cdfwt5b cgf6h58 dir dir-ltr">
-                                      <div class="c1xsvlgx dir dir-ltr">
+                                    <div class="cdfwt5b header__container dir dir-ltr">
+                                      <div class="header__brand-wrapper dir dir-ltr">
                                         <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
@@ -4934,7 +4934,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="cylj8v3 dir dir-ltr">
+                                      <div class="header__nav-wrapper dir dir-ltr">
                                         <div class="c1yo0219 dir dir-ltr">
                                           <div
                                             style="
