update css imports

--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/products.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>
       9 double bedroom luxury villa with infinity pool - Houses for Rent in
       Malay, Western Visayas, Philippines - Airbnb
