--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/airbnb-for-work.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>Airbnb For Work - Account Settings - Airbnb</title>
   </head>
   <body class="with-new-header">
