--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -7,7 +7,7 @@
     <title>Create a listing - Airbnb</title>
 
     <link rel="stylesheet" href="../assets/css/global.css" />
-    <link rel="stylesheet" href="../assets/css/pages/become-a-host/intro.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
   </head>
 
   <body class="with-new-header">
