--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link
       rel="stylesheet"
-      href="../assets/css/pages/become-a-host/preview.css"
+      href="../assets/css/pages.css"
     />
   </head>
 
