--- a/explore-when.html
+++ b/explore-when.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/explore.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
 
     <title>Explore</title>
   </head>
