--- a/gift.html
+++ b/gift.html
@@ -7,7 +7,7 @@
     <title>Redeem an Airbnb gift card | Airbnb®</title>
 
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/gift.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
   </head>
 
   <body class="with-new-header">
