--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/help.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>Home - Airbnb Help Center</title>
   </head>
   <body class="with-new-header">
