--- a/personal-info.html
+++ b/personal-info.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/personal-info.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>Personal Information - Account Settings - Airbnb</title>
   </head>
   <body class="with-new-header">
