--- a/places.html
+++ b/places.html
@@ -7,7 +7,7 @@
     <title>Nobu Malibu - Bar - Malibu | Airbnb®</title>
 
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/places.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
   </head>
 
   <body class="with-new-header">
