--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/privacy-and-sharing.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>Privacy &amp; Sharing - Account Settings - Airbnb</title>
   </head>
   <body class="with-new-header">
