--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/professional-hosting.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>Professional Hosting - Account Settings - Airbnb</title>
   </head>
   <body class="with-new-header">
