--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/pages/resources.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>Home - Resource Center - Airbnb</title>
   </head>
   <body class="with-new-header">
