--- a/reviews-tell-us.html
+++ b/reviews-tell-us.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/reviews-tell-us.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
 
     <title>Write a public review for Jose Angelo - Airbnb</title>
   </head>
