--- a/signup_login.html
+++ b/signup_login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/signup_login.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
     <title>Log In / Sign Up</title>
   </head>
 
