--- a/submission/theme.html
+++ b/submission/theme.html
@@ -11,7 +11,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../assets/css/pages/submission/theme.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
   </head>
   <body class="with-new-header">
     <div id="site-skip-links">
