--- a/wishlist.html
+++ b/wishlist.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>1st Wishlist · Wishlists - Airbnb</title>
     <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages/wishlist.css" />
+    <link rel="stylesheet" href="assets/css/pages.css" />
   </head>
   <body class="with-new-header">
     <div id="site-skip-links">
