--- a/profile.html
+++ b/profile.html
@@ -170,7 +170,7 @@
                     </div>
                     <main id="site-content">
                       <nav
-                        class="_1tt196k"
+                        class="_1tt196k d-md-none"
                         aria-hidden="false"
                         data-shared-element-id="tab-bar"
                       >
